*** HEAD CONTENT *****************************************************************
**********************************************************************************
  
  What's new in this drop
  ================================================================================
  
  PRs Fixed in this Release
  ================================================================================
  1GLABQ7: ITPJCORE:WIN2000 - JavaCore.create(String) throws an unexpected exception
  1GL0PGV: ITPJCORE:WINNT - Batch compiler leaving JARs open  
  1GL4QKI: ITPJCORE:ALL - VerifyError when running app
  
  PRs Closed in this Release
  ===============================================================================
  1GL0MN9: ITPJCORE:WIN2000 - search: not consistent results for nested types
  

**********************************************************************************
*** STABLE CONTENT (2.0 STREAM, v_203_08_demo_candidate) *************************
**********************************************************************************
  
  What's new in this drop
  ================================================================================
  * Classpath entries (except for source folders) can be tagged as exported upon
    creation. When exported, an entry is contributed to dependent projects along 
    with its output location.
    Added APIs:
    
    Testing status of a given entry
     + IClasspathEntry.isExported()

    Creating entries with export flag
     + JavaCore.newProjectEntry(IPath, boolean)
     + JavaCore.newLibraryEntry(IPath, IPath, IPath, boolean)
     + JavaCore.newVariableEntry(IPath, boolean)
     
    Helper method computing a resolved and expanded path (all exports from prerequisites)
     + IJavaProject.getExpandedClasspath(boolean)

  * CodeAssist inserts qualification on field/method references in case of ambiguities.

  * CodeAssist provides parameter names on method completions. 
    API Changes on ICompletionRequestor