@@ -113,6 +113,9 @@ STREAM: 2.0
   
   PRs Fixed in this Release
   ================================================================================
+  3175  	JCK1.3a - ICLS - Comparing current instance against enclosing instance inside of anonymous class. (1GLDSBS)  
+  1GLBOJZ:  ITPJCORE:WIN2000 - UnaryExpression doesn't store expression type in bit mask
+  1GDS7IP:  ITPJCORE:WIN2000 - VerifyError related to a local index computation
   1GLABQ7: ITPJCORE:WIN2000 - JavaCore.create(String) throws an unexpected exception
   1GL0PGV: ITPJCORE:WINNT - Batch compiler leaving JARs open  
   1GL4QKI: ITPJCORE:ALL - VerifyError when running app
